--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                        <br><br><br>
                         <img src="images/logo3.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
-                    <i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i>
+                    <a href="#one"><i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i></a>
+
                 </div>
             </div>
         </section>
@@ -109,7 +110,7 @@
         <div class="divider"></div>
 
 
-        <section class="padded-cozy">
+        <section class="padded-cozy" id="one">
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
@@ -1539,6 +1540,7 @@
                     <div class="col l2 s4" style="width: 130px">
 
                         <div style="padding-left: 10px;width: 180px;">
+                        <p class="white-text">Follow Us</p>
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 408.788 408.788" width="30px" height="30px" style="enable-background:new 0 0 408.788 408.788;" xml:space="preserve">
