--- a/contact.html
+++ b/contact.html
@@ -159,14 +159,14 @@
 
     </main>
 
-
-    <section style="border-top: 6px solid orange">
+<section style="border-top: 6px solid orange">
         <div class="parallax-container" style="height: 35vh;">
+
+           <img src="images/ciilogocopy%20copy.png" alt="" style="margin-left: 0px;">
             <div class="container">
-                <br><br>
                 <div class="row">
                     <div class="col l6 s12">
-                        <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
+                        <img src="images/logo3.png" class="col s6 ">
                         <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
                     </div>
@@ -217,7 +217,7 @@
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 408.788 408.788" width="30px" height="30px" style="enable-background:new 0 0 408.788 408.788;" xml:space="preserve">
-<path style="fill:#475993;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
+<path style="fill:#5c6bc0;" d="M353.701,0H55.087C24.665,0,0.002,24.662,0.002,55.085v298.616c0,30.423,24.662,55.085,55.085,55.085
 	h147.275l0.251-146.078h-37.951c-4.932,0-8.935-3.988-8.954-8.92l-0.182-47.087c-0.019-4.959,3.996-8.989,8.955-8.989h37.882
 	v-45.498c0-52.8,32.247-81.55,79.348-81.55h38.65c4.945,0,8.955,4.009,8.955,8.955v39.704c0,4.944-4.007,8.952-8.95,8.955
 	l-23.719,0.011c-25.615,0-30.575,12.172-30.575,30.035v39.389h56.285c5.363,0,9.524,4.683,8.892,10.009l-5.581,47.087
@@ -260,7 +260,7 @@
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 382 382" width="30px" height="30px" style="enable-background:new 0 0 382 382;margin-left: 10px" xml:space="preserve">
-<path style="fill:#0077B7;" d="M347.445,0H34.555C15.471,0,0,15.471,0,34.555v312.889C0,366.529,15.471,382,34.555,382h312.889
+<path style="fill:#42a5f5;" d="M347.445,0H34.555C15.471,0,0,15.471,0,34.555v312.889C0,366.529,15.471,382,34.555,382h312.889
 	C366.529,382,382,366.529,382,347.444V34.555C382,15.471,366.529,0,347.445,0z M118.207,329.844c0,5.554-4.502,10.056-10.056,10.056
 	H65.345c-5.554,0-10.056-4.502-10.056-10.056V150.403c0-5.554,4.502-10.056,10.056-10.056h42.806
 	c5.554,0,10.056,4.502,10.056,10.056V329.844z M86.748,123.432c-22.459,0-40.666-18.207-40.666-40.666S64.289,42.1,86.748,42.1
@@ -352,15 +352,11 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright ">
-                <div class="container ">
-                    <a href="https://dayshmookh.github.io/ " class="white-text right " target="_blank ">© 2018 R00T INC.</a>
-                    <!--<a class="white-text right " href="#! ">More Links</a>-->
-                </div>
-            </div>
+
             <div class="parallax"><img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2; filter: brightness(30%) saturate(150%);">
 
             </div>
+
         </div>
     </section>
     <script src="js/jquery.min.js"></script>
