follow us added

--- a/conference.html
+++ b/conference.html
@@ -365,6 +365,7 @@ fill="#ff9800" stroke="none">
                     <div class="col l2 s4" style="width: 130px">
 
                         <div style="padding-left: 10px;width: 180px;">
+                        <p class="white-text">Follow Us</p>
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 408.788 408.788" width="30px" height="30px" style="enable-background:new 0 0 408.788 408.788;" xml:space="preserve">
