--- a/conference.html
+++ b/conference.html
@@ -143,6 +143,8 @@ fill="#ff9800" stroke="none">
 
                 <div class="divider" id="eventdivider"></div>
                 <p class="light" id="date">Conference Day - <span class="orange-text">28th sept </span>
+                     </p>
+<p class="light" id="date">Timing  - <span class="orange-text">9 a.m to 6 p.m </span>
 
                 </p>
 
@@ -179,7 +181,7 @@ fill="#ff9800" stroke="none">
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h2 class="center strong yellow-text text-accent-2 " data-aos="zoom-in">Some highlights of event</h2>
+                <h2 class="center strong orange-text " data-aos="zoom-in">Some highlights of event</h2>
                 <p class="center orange-text padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
@@ -248,7 +250,7 @@ fill="#ff9800" stroke="none">
 
         <section class="padded-top-comfortable padded-bottom-comfortable grey darken-3">
             <div class="row container">
-                <h2 class="center strong yellow-text text-accent- padded-bottom-comfortable" data-aos="zoom-in">Topics</h2>
+                <h2 class="center strong orange-text padded-bottom-comfortable" data-aos="zoom-in">Topics</h2>
                 <ul class="collapsible expandable">
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
