--- a/hackathon.html
+++ b/hackathon.html
@@ -97,10 +97,11 @@
                     <div class="container full-width">
 
                         <h1 class="light center white-text strong">SMART   INDUSTRY   HACKATHON</h1>
+                       <div class="center white-text "><h4>Open till 20th july 2018</h4></div>
+
                         <p class="center">
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn" target="_blank">Register now</a>
                         </p>
-
 
                     </div>
                 </div>
@@ -218,7 +219,7 @@
         <section class="padded-bottom-cozy grey darken-3 ">
             <div id="domain">
 
-                <h3 class="orange-text center strong">Domains</h3>
+                <h3 class="orange-text center strong" data-aos="zoom-in">Domains</h3>
                 <!-- <p class="center light flow-text">
                     1. Life Science, Textile, Healthcare & Pharmacy
                     <br> 2. Automobile, Defence & Aerospace
@@ -337,7 +338,7 @@
         <section class="padded-bottom-cozy ">
             <div id="domain">
 
-                <h3 class="orange-text center strong">Domains</h3>
+                <h3 class="orange-text center strong" data-aos="zoom-in">Domains</h3>
                 <!-- <p class="center light flow-text">
                     1. Life Science, Textile, Healthcare & Pharmacy
                     <br> 2. Automobile, Defence & Aerospace
@@ -394,7 +395,7 @@
         <section class="grey darken-3">
             <div class="container padded-top-cozy padded-bottom-cozy">
 
-                <h3 class="yellow-text text-accent-2 center padded-bottom-comfortable strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="30.000000pt" height="30.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
+                <h3 class="yellow-text text-accent-2 center padded-bottom-comfortable strong" data-aos="zoom-in"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="30.000000pt" height="30.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,50.000000) scale(0.100000,-0.100000)"
 fill="#ffff00" stroke="none">
 <path d="M145 462 c-49 -23 -99 -78 -115 -127 -7 -20 -10 -67 -8 -105 5 -87
@@ -422,8 +423,8 @@ c0 -38 3 -70 8 -70 8 0 127 258 121 264 -2 2 -59 -22 -126 -53z"/>
         <div class="divider"></div>
 
         <section>
-            <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text center padded-bottom-cozy strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50.000000pt" height="50.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
+            <div class="container padded-top-cozy padded-bottom-cozy" >
+                <h3 class="orange-text center padded-bottom-cozy strong" data-aos="zoom-in"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50.000000pt" height="50.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
 <g transform="translate(0.000000,50.000000) scale(0.100000,-0.100000)"
 fill="#ff9800" stroke="none">
 <path d="M363 468 c-4 -7 -26 -14 -48 -15 -22 -1 -63 -5 -92 -9 -39 -4 -58 -2
