--- a/index.html
+++ b/index.html
@@ -1460,7 +1460,7 @@
 
         <section class="padded-comfortable grey darken-3">
 
-            <h3 class="center  orange-text padded-bottom-comfortable" data-aos="zoom-in  strong">Partners</h3>
+            <h3 class="center  orange-text padded-bottom-comfortable strong"data-aos="zoom-in">Partners</h3>
             <div class="container">
                 <div class="row">
                     <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
