--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
             <div class="col s12 m6 ">
 
-                <h3 class="center strong orange-text">Contact us</h3>
+                <h3 class="center strong orange-text">Contact Us</h3>
 
 
                 <form class="container">
