--- a/faq.html
+++ b/faq.html
@@ -54,7 +54,7 @@
                             <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" target="_blank" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
                 <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" target="_blank" class="btn orange white-text">Register</a>
             </li>
         </ul>
     </header>
