--- a/hackathon.html
+++ b/hackathon.html
@@ -53,7 +53,7 @@
                             <a class="waves-effect waves-orange" href="faq.html">FAQ</a>
                         </li>
                         <li>
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" target="_blank" class="btn orange white-text">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -80,7 +80,7 @@
                 <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn orange white-text">Register</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" target="_blank" class="btn orange white-text">Register</a>
             </li>
         </ul>
     </header>
@@ -100,7 +100,7 @@
                        <div class="center white-text "><h4>Open till 20th july 2018</h4></div>
 
                         <p class="center">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat" id="registerbtn" target="_blank">Register now</a>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform"class="btn btn-register-hero btn-large btn-flat" id="registerbtn" target="_blank">Register now</a>
                         </p>
 
                     </div>
