--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                         -->
                        <br><br><br>
-                        <img src="images/logo3.png" alt="logo" style="max-width:80vw; max-height: 40vh">
+                        <img src="images/Logo_.jpg%20copy.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
                     <a href="#one"><i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i></a>
 
