--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <!--<h6 class="center light grey-text">About</h6>-->
                 <h3 class="center orange-text strong" data-aos="zoom-in">IndNX 4.0</h3>
-                <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">Edition 1</span>)</h5>
+                <h5 class="center orange-text strong" data-aos="zoom-in">Smart Industry Hackathon (<span class="grey-text text-darken-3">1st Edition</span>)</h5>
 
                 <p class="center  text-darken-2 padded-top-compact  light" style="font-size: 20px">There's a lot of hype about terms like IoT, <span class="up">IIoT</span> , Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique <span class="upone"> Industry-Institution </span>interaction event called <span class="up">IndNX 4.0</span> - Smart Industry Hackathon (Edition 1).</p>
             </div>
