--- a/hackathon.html
+++ b/hackathon.html
@@ -660,6 +660,34 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
             </div>
         </section>
 
+        <div class="parallax-container">
+
+            <div class="valign-wrapper full-height">
+                <div class="container full-width">
+
+                    <h3 class="light center white-text strong" style="font-size: 80px;">Use Cases</h3>
+                    <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
+                  -->
+                     <div class=" row">
+                    <div class="col s12 m6 l6" style="border-right: 1px solid orange">
+                    <p class="center">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">Hardware</a>
+                    </p>
+                    </div>
+                    <p class="center">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">software</a>
+                    </p>
+                    </div>
+
+
+                </div>
+            </div>
+
+            <div class="parallax">
+                <img src="images/bruno-martins-25865-unsplash.jpg" alt="Unsplashed background img 1">
+            </div>
+        </div>
+
 
 
 
