bg image slider

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                     <a href="hackathon.html">
                         <div class="col s12 m6" data-aos="zoom-in">
-                            <div class="card tiny valign-wrapper" style="background-image: url('images/code.jpg')">
+                            <div class="card tiny valign-wrapper" style="background-image: url('images/coding-924920.jpg')">
                                 <h1 class="light white-text strong center full-width">Hackathon</h1>
 
                             </div>
@@ -165,7 +165,7 @@
                     </a>
                     <a href="conference.html">
                         <div class="col s12 m6" data-aos="zoom-in">
-                            <div class="card tiny valign-wrapper" style="background-image: url('images/edwin-andrade-153753-unsplash.jpg')">
+                            <div class="card tiny valign-wrapper" style="background-image: url('images/microphone-704255_1920.jpg')">
                                 <h2 class="light white-text strong center full-width">Conference</h2>
 
                             </div>
