--- a/hackathon.html
+++ b/hackathon.html
@@ -444,6 +444,28 @@ c0 -38 3 -70 8 -70 8 0 127 258 121 264 -2 2 -59 -22 -126 -53z"/>
 
         <div class="divider"></div>
 
+
+        <div class="parallax-container">
+
+            <div class="valign-wrapper full-height">
+                <div class="container full-width">
+
+                    <h3 class="light center white-text strong" style="font-size: 80px;">Use Cases</h3>
+                    <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
+                  -->
+
+                    <p class="center">
+                        <a href="UseCases.html" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">Click Here</a>
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="parallax">
+                <img src="images/bruno-martins-25865-unsplash.jpg" alt="Unsplashed background img 1">
+            </div>
+        </div>
+
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy" >
                 <h3 class="orange-text center padded-bottom-cozy strong" data-aos="zoom-in"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50.000000pt" height="50.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
@@ -470,36 +492,20 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
 
 
                 </p>
-            </div>
-        </section>
-
-        <div class="parallax-container">
-
-            <div class="valign-wrapper full-height">
-                <div class="container full-width">
-
-                    <h3 class="light center white-text strong" style="font-size: 80px;">Use Cases</h3>
-                    <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
-                  -->
-                     <div class=" row">
+                <div class=" row">
                     <div class="col s12 m6 l6" style="border-right: 1px solid orange">
                     <p class="center">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">Hardware</a>
+                        <a href="Hardware.html" target="_blank">Hardware</a>
                     </p>
                     </div>
                     <p class="center">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSflknuu8Esr3qxolWBlCfAs5ETjyBcJklXTRfZKkd1khLGVVA/viewform" class="btn btn-register-hero btn-large btn-flat yellow-text" target="_blank">software</a>
+                        <a href="software.html" class="btn btn-register-hero btn-large btn-flat black-text" target="_blank">software</a>
                     </p>
                     </div>
-
-
-                </div>
             </div>
 
-            <div class="parallax">
-                <img src="images/bruno-martins-25865-unsplash.jpg" alt="Unsplashed background img 1">
-            </div>
-        </div>
+        </section>
+
 
 
 
