--- a/hackathon.html
+++ b/hackathon.html
@@ -495,7 +495,7 @@ c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
                 <div class=" row">
                     <div class="col s12 m6 l6" style="border-right: 1px solid orange">
                     <p class="center">
-                        <a href="Hardware.html" target="_blank">Hardware</a>
+                        <a href="Hardware.html" target="_blank" class="btn btn-register-hero btn-large btn-flat black-text" >Hardware</a>
                     </p>
                     </div>
                     <p class="center">
