--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
     </header>
 
     <main>
-        <section>
+<!--        <section id="hero-slider" class="screen-height">
 
-            <div id="hero-slider" class="screen-height">
-                <div style="margin-top: 0px;">
+            <div style="margin-top: 0px;">
                             <img src="images/ciilogocopy.png" alt="">
                         </div>
                 <div class="container center padded-top-cozy">
@@ -97,15 +96,46 @@
                         <h1 class="white-text">IndNX 4.0</h1>
                         <p class="white-text">Date: XX Month 2018</p>
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        -->
+
                        <br><br><br>
                         <img src="images/logo3.png" alt="logo" style="max-width:80vw; max-height: 40vh">
                     </div>
                     <a href="#one"><i class="material-icons white-text padded-top-comfortable animated infinite bounce medium light">keyboard_arrow_down</i></a>
 
                 </div>
-            </div>
         </section>
+
+
+       -->
+
+
+
+    <section style="border-top: 6px solid orange">
+        <div class="parallax-container" style="height: 100vh;">
+
+           <img src="images/ciilogocopy.png" alt="" style="margin-left: 30px;margin-top: 20px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col l12 s12">
+                       <br><br>
+                        <img src="images/Logoteen.png" class="col s12">
+                        <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+                        from diffrent sectors and Institutes</p>-->
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="parallax" id="hero-slider" style="opacity: 0.9; filter: brightness(30%) saturate(150%);"><img src="#" alt="Unsplashed background img 1">
+
+            </div>
+
+        </div>
+    </section>
+
+
+
+
 
         <div class="divider"></div>
 
