--- a/Hardware.html
+++ b/Hardware.html
@@ -92,14 +92,306 @@
         <section class="padded-top-comfortable padded-bottom-comfortable ">
             <div class="row container">
                 <h2 class="center strong orange-text padded-bottom-comfortable" data-aos="zoom-in">Hardware Tools</h2>
+                <div class=" orange-text" style="font-size: 25px">A. IOT Boards </div>
                 <ul class="collapsible expandable">
-                    <li>
+                    <div>
+                       <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
-                            <p class="grey-text text-darken-2">Topic Name</p>
+                            <p class="grey-text text-darken-2">
+NODEMCU LUA WIFI INTERNET OF THINGS ESP8266 DEVELOPMENT BOARD
+</p>
                         </div>
+                        </li>
+                    </div>
 
-                    </li>
+                </ul>
+
+                   <br>
+                   <br>
+                   <br>
+                  <div class="orange-text" style="font-size: 25px">B. Motor Drivers  </div>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+L298 2A DUAL MOTOR DRIVER MODULE WITH PWM CONTROL
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                     <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+ROTARY QUADRATURE ENCODER 2500PPR/10000CPR SOLID SHAFT
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+
+                   <br>
+                   <br>
+                   <br>
+                  <div class="orange-text" style="font-size: 25px">C. Sensor Module
+ </div>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+PIR MOTION DETECTION SENSOR MODULE
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+TCS3200 BASED COLOR SENSOR MODULE
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                   <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+ULTRASONIC DISTANCE MEASUREMENT SENSOR
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+9DOF 3 AXIS ACCELEROMETER + GYROSCOPE + MAGNETOMETER MPU-9250
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+FLOW SENSOR / FLUID FLOWMETER
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+DS18B20 TEMPERATURE SENSOR
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+HIGH PRECISION ATMOSPHERIC PRESSURE SENSOR MODULE BMP280
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+PIEZO VIBRATION SENSOR – LARGE WITH MASS
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+CURRENT SENSOR MODULE
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+VOICE RECOGNITION MODULE ARDUINO COMPATIBLE
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+FINGER PRINT SCANNER GT-511C3 ARDUINO COMPATIBLE
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+LINEAR HALL SENSOR MODULE
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+Dust Sensor Module - GP2Y1010AU0F
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+
+                   <!--
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
@@ -136,6 +428,7 @@
                         </div>
 
                     </li>
+
                      <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
@@ -143,6 +436,7 @@
                         </div>
 
                     </li>
+
                      <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
@@ -277,7 +571,7 @@
 
                     </li>
                 </ul>
-
+-->
 
 
 
