--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="parallax-container" style="height: 100vh;">
 
            <img src="images/ciilogocopy.png" alt="" style="margin-left: 30px;margin-top: 20px;">
-            <div class="container">
+            <div class="container" style="width: 800px;">
                 <div class="row">
                     <div class="col l12 s12">
                        <br><br>
