--- a/hackathon.html
+++ b/hackathon.html
@@ -238,19 +238,19 @@
         
                                 <div class="col s12 m4 l4">
                                         <img src="images/domain/success.svg" alt="" style="height: 200px; width: 200px;margin-left: 140px;">
-                                        <p style="font-size: 20px;text-align: center;margin-left: 150px;">Pre Conference Project Competetion</p>
+                                        <p class="orange-text" style="font-size: 30px;text-align: center;margin-left: 150px;">Rs. 30,000</p>
                                     </div>
                                     <div class="col s12 m4 l4">
                                         <img src="images/domain/success.svg" alt="" style="height: 300px; width: 300px">
-                                        <p style="font-size: 20px;">
-                                            Project <br> Implementation
+                                        <p class="orange-text" style="font-size: 40px;">
+                                            Rs. 50,000
                                         </p>
                                     </div>
-                                    <div class="col s12 m4 l4">
+                                    <div class="col s12 m4 l4" style="width: 350px;">
                                         <div style="margin-left:0px">
                                             <img src="images/domain/success.svg" alt="" style="height: 200px; width: 200px;margin-left: 0px;">
                                         </div>
-                                        <p style="font-size: 20px; margin-left: 20px;">Conference <br> Day</p>
+                                        <p class="orange-text" style="font-size: 30px; margin-left: 20px;">Rs. 20,000</p>
                                     </div>
                             
                         </div>
