--- a/Hardware.html
+++ b/Hardware.html
@@ -391,6 +391,264 @@ Dust Sensor Module - GP2Y1010AU0F
                 </ul>
 
 
+                     <br>
+                   <br>
+                   <br>
+                  <div class="orange-text" style="font-size: 25px">D. Gas Sensor  </div>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+MQ-135 AIR QUALITY & HAZARDOUS GAS SENSOR
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                   <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+MODULE
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+
+
+                   <br>
+                   <br>
+                   <br>
+                  <div class="orange-text" style="font-size: 25px">E. Wireless Modules
+ </div>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+433MHZ TRANSMITTER + RECEIVER
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+<ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+XBEE S2C LOW-POWER MODULE, WITH WIRE ANTENNA FOR ZIGBEE NETWORK
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+<ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+BLUETOOTH BLE4.0 UART MODULE BREAKOUT BOARD BASED ON HM-10
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                  <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+SIM 800A GSM GPRS MODULE WITH RS232 INTERFACE
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                  <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+
+RFID READER MODULE WITH ANTENNA - USB - UART
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+
+                 <br>
+                   <br>
+                   <br>
+                  <div class="orange-text" style="font-size: 25px">F. Development Boards
+
+ </div>
+                <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+RASPBERRY PI 3 MODEL B 64BIT QUAD CORE WITH WIFI AND BLE
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                 <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+STM32 ARDUINO COMPATIBLE DEVELOPMENT BOARD ARM CORTEX-M3
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                  <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+
+ARDUINO MEGA 2560 R3 BOARD
+
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                 <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+
+ARDUINO DUE R3 ARM CORTEX-M3 CONTROL BOARD
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+
+                   <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+
+OPTO-ISOLATED 2 CHANNEL 5V RELAY BOARD
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
+                  <ul class="collapsible expandable">
+                    <div class="row">
+                       <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">
+
+
+
+
+PIC18F4550 Development Board
+
+
+
+</p>
+                        </div>
+                        </li>
+                    </div>
+
+
+
+                </ul>
                    <!--
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
