--- a/Hardware.html
+++ b/Hardware.html
@@ -116,7 +116,7 @@ NODEMCU LUA WIFI INTERNET OF THINGS ESP8266 DEVELOPMENT BOARD
                        <li>
                         <div class="collapsible-header valign-wrapper   ">
                             <i class="material-icons orange-text">adjust</i>
-                            <p class="grey-text text-darken-2">
+                            <p class="grey-text text-darken-2 strong">
 L298 2A DUAL MOTOR DRIVER MODULE WITH PWM CONTROL
 </p>
                         </div>
