--- a/hackathon.html
+++ b/hackathon.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/hackathon.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> -->
+     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -234,27 +234,6 @@
                 </p>-->
                 <div class="center padded-top-comfortable padded-bottom-comfortable">
 
-<<<<<<< HEAD
-
-
-                    <div class="row">
-
-                        <div class="col s12 m4 l4">
-                            <img src="images/domain/success.svg" alt="" style="height: 200px; width: 200px;margin-left: 140px;">
-                            <p style="font-size: 20px;text-align: center;margin-left: 150px;">Pre Conference Project Competetion</p>
-                        </div>
-                        <div class="col s12 m4 l4">
-                            <img src="images/domain/success.svg" alt="" style="height: 300px; width: 300px">
-                            <p style="font-size: 20px;">
-                                Project <br> Implementation
-                            </p>
-                        </div>
-                        <div class="col s12 m4 l4">
-                            <div style="margin-left:0px">
-                                <img src="images/domain/success.svg" alt="" style="height: 200px; width: 200px;margin-left: 0px;">
-                            </div>
-                            <p style="font-size: 20px; margin-left: 20px;">Conference <br> Day</p>
-=======
 
 
                         <div class="row">
@@ -276,7 +255,7 @@
                                         <p class="orange-text" style="font-size: 30px; margin-left: 20px;">Rs. 20,000</p>
                                     </div>
 
->>>>>>> origin/master
+
                         </div>
 
                     </div>
