--- a/index.html
+++ b/index.html
@@ -154,26 +154,26 @@
 
 
 
-        <div class="container center padded-bottom-cozy row" style="margin-left: 170px;width: 93vw">
+        <div class="container center padded-bottom-cozy row" style="margin-left: 6%;width: 93vw">
 
 
             <!-- <img src="images/things.png" alt="bfdgbjdg" style="max-width: 90vw;">-->
 
-            <div class="col s12 m4 l4" style="width: 260px;">
+            <div class="col s12 m4 l4" style="">
                 <img src="images/icon1.png" alt="">
-                <p style="font-size: 20px;margin-left: 50px;text-align: left">Pre Conference Project Competetion</p>
+                <p style="font-size: 20px;margin-left: 50px;text-align: center">Pre Conference Project Competetion</p>
             </div>
-            <div class="col s12 m4 l4" style="width: 600px;">
+            <div class="col s12 m4 l4" style="">
                 <img src="images/icon2.png" alt="">
                 <p style="font-size: 20px;">
                     Project <br> Implementation
                 </p>
             </div>
-            <div class="col s12 m4 l4" style="width: 220px;">
+            <div class="col s12 m4 l4" style="">
                 <div style="margin-left:0px">
                     <img src="images/icon3.png" alt="">
                 </div>
-                <p style="font-size: 20px; margin-left: 20px;">Conference <br> Day</p>
+                <p style="font-size: 20px; margin-left:10px;">Conference <br> Day</p>
             </div>
         </div>
 
@@ -216,7 +216,7 @@
                     <h3 class="center orange-text strong" data-aos="zoom-in"> Objectives</h3>
                     <br><br><br>
 
-                    <div class="col s12 m4 l3" style="width: 230px; margin-left: 170px">
+                    <div class="col s12 m4 l3" style="width: 230px; margin-left: 10%">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 536.229 536.229" style="enable-background:new 0 0 536.229 536.229;" xml:space="preserve">
 <g>
 	<g>
@@ -262,10 +262,10 @@
 </svg>
 
 
-                        <p class="flow-text light orange-text" style="font-size: 20px;">Building an <br> IoT solution</p>
+                        <p class="flow-text light orange-text" style="font-size: 20px;text-align: center">Building an <br> IoT solution</p>
                     </div>
 
-                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 5%;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -358,7 +358,7 @@
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 5%;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="64px" height="64px">
 <g>
 	<g>
@@ -409,7 +409,7 @@
                         </p>
                     </div>
 
-                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 56px;">
+                    <div class="col s12 m4 l3" style="width: 230px;margin-left: 5%;">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
 <g>
 	<g id="explore">
@@ -589,7 +589,8 @@
 
 
                             <svg aria-hidden="true" data-prefix="fas" data-icon="graduation-cap" class="svg-inline--fa fa-graduation-cap fa-w-20" width="64.000000pt" height="64.000000pt" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="#ffd600" d="M622.884 199.005l-275.817 85.1a96 96 0 0 1-54.134 0L92.398 222.232c-8.564 11.438-11.018 23.05-11.918 38.335C89.778 266.165 96 276.355 96 288c0 11.952-6.557 22.366-16.265 27.861l16.197 123.096c.63 4.786-3.1 9.043-7.932 9.043H40c-4.828 0-8.562-4.253-7.932-9.044L48.265 315.86C38.557 310.366 32 299.952 32 288c0-12.034 6.646-22.511 16.465-27.976.947-17.951 3.974-33.231 12.152-47.597l-43.502-13.422c-22.876-6.801-22.766-39.241 0-46.01l275.817-85.1a96 96 0 0 1 54.134 0l275.817 85.1c22.877 6.801 22.767 39.241.001 46.01zM356.503 314.682l-.207.064-.207.061a127.998 127.998 0 0 1-72.177 0l-.207-.061-.207-.064-150.914-46.57L120 352c0 35.346 89.543 64 200 64s200-28.654 200-64l-12.583-83.888-150.914 46.57z"></path></svg>
-                            <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
+
+                             <p class="flow-text light orange-text" style="font-size: 20px;">Students are <br> mere spectators</p>
 
 
 
